Port MezzConfig GUI to Minecraft 1.20.1 on its own branch