@@ -1,5 +1,7 @@
 package net.mezzdev.config.gui;
 
+import net.mezzdev.config.gui.util.ConfigMath;
+
 import net.mezzdev.config.gui.screenlist.ConfigScreenListEntry;
 import net.mezzdev.config.gui.textures.ConfigDrawableStatic;
 import net.mezzdev.config.gui.textures.ConfigTextures;
@@ -54,7 +56,7 @@ final class ConfigScreenModTabs {
 		}
 		String firstModId = activeModId;
 		if (!visibleTabs.isEmpty()) {
-			firstModId = visibleTabs.getFirst().entry().modId();
+			firstModId = visibleTabs.get(0).entry().modId();
 		}
 		this.entries = List.copyOf(entries);
 		int firstIndex = getEntryIndex(firstModId);
@@ -134,7 +136,7 @@ final class ConfigScreenModTabs {
 				firstVisibleIndex = activeIndex - visibleTabCount + 1;
 			}
 		}
-		firstVisibleIndex = Math.clamp(firstVisibleIndex, 0, getMaximumScroll());
+		firstVisibleIndex = ConfigMath.clamp(firstVisibleIndex, 0, getMaximumScroll());
 		updateVisibleTabs();
 	}
 
@@ -247,7 +249,7 @@ final class ConfigScreenModTabs {
 	}
 
 	public boolean mouseClicked(double mouseX, double mouseY, int button) {
-		if (button != 0) {
+		if (button != com.mojang.blaze3d.platform.InputConstants.MOUSE_BUTTON_LEFT) {
 			return false;
 		}
 		@Nullable
@@ -262,7 +264,7 @@ final class ConfigScreenModTabs {
 	public ClickResult mouseReleased(double mouseX, double mouseY, int button) {
 		ClickTarget pressedTarget = this.pressedTarget;
 		this.pressedTarget = null;
-		if (button != 0 || pressedTarget == null) {
+		if (button != com.mojang.blaze3d.platform.InputConstants.MOUSE_BUTTON_LEFT || pressedTarget == null) {
 			return ClickResult.NOT_HANDLED;
 		}
 		if (!pressedTarget.area().contains(mouseX, mouseY)) {
@@ -310,7 +312,7 @@ final class ConfigScreenModTabs {
 	}
 
 	private boolean scrollBy(long steps) {
-		int nextIndex = (int) Math.clamp(firstVisibleIndex + steps, 0, getMaximumScroll());
+		int nextIndex = (int) ConfigMath.clamp(firstVisibleIndex + steps, 0, getMaximumScroll());
 		if (nextIndex == firstVisibleIndex) {
 			return false;
 		}
